<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreshDocs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hostname">Hostname</string>
    <string name="auth_heading">Authorization </string>
    <string name="advanced_heading">Advanced</string>
    <string name="port">Port</string>
    <string name="hidden_files">Show Hidden Files</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="favorites">Favorites</string>
    <string name="loading">Loading ...</string>
    <string name="browse">Browse</string>
    <string name="search_hint"></string>
    <string name="search_invoke">search</string>
    <string name="error_connection_failed">Server Connection Failed</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>
    <string name="error_server_error">Unknown Server Error</string>
    <string name="send">Share</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="email_text">Sent using the Alfresco Android client.</string>
    <string name="email_title">Send Email ...</string>
    <string name="preference_filename">prefs.dat</string>
    <string name="add_server">Add Server</string>
    <string name="delete_server">Delete</string>
    <string name="edit_server">Edit</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="empty_servers">No Servers</string>
    <string name="empty_folder">Empty folder</string>
    <string name="connecting_host">Contacting</string>
    <string name="ssl">SSL</string>
    <string name="webapp_root">URL</string>
    <string name="search_ambiguaous">You must choose a server before searching</string>
    <string name="about">About</string>
    <string name="about_description">Another sandbox project from ...</string>
    <string name="build_date">Build date:</string>
    <string name="zia_www">http://www.ziaconsulting.com</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_search_results">Empty Search Result</string>
    <string name="offline">Offline Mode</string>
    <string name="offline_search_error">Search is unavailable while offline</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">CMIS</string>
    <string name="title_feature2">File Explorer</string>
    <string name="title_feature3">Favorites</string>
    <string name="title_feature4">Add Server</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Google+, Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="media_dialog">Media preview</string>
    <string name="dir_info">Folder Information</string>
    <string name="manager_act">Phone Management</string>
    <string name="str_color_white">White</string>
    <string name="str_color_magenta">Magenta</string>
    <string name="str_color_yellow">Yellow</string>
    <string name="str_color_red">Red</string>
    <string name="str_color_cyan">Cyan</string>
    <string name="str_color_blue">Blue</string>
    <string name="str_color_green">Green</string>
    <string name="str_color_black">Black</string>
    <string name="str_change_text_color_setting">Change text color</string>
    <string name="str_file_information">File information</string>
    <string name="str_folder_information">Folder information</string>
    <string name="str_upload">Upload</string>
    <string name="str_delete">Detele</string>
    <string name="str_back">Back</string>
    <string name="str_name">Name</string>
    <string name="str_created_by">Created by</string>
    <string name="str_last_modification_date">Last Modification Date</string>
    <string name="str_last_modified_by">Last Modified By</string>
    <string name="str_version">Version</string>
    <string name="str_content_type">Content Type</string>
    <string name="str_object_id">Object Id</string>
    <string name="str_parent_id">Parent Id</string>
    <string name="str_content">Content</string> 
    <string name="str_ok">Ok</string> 
	<string name="str_cancel">Cancel</string> 
	<string name="str_folder_name">Folder Name</string>
	<string name="str_folder_description">Folder Description</string>

	<string name="str_sort_files_folders">Choose how to sort files and folders</string>
    <string name="str_sorting_type">Sorting type</string>
    <string name="str_display">Display</string>
    <string name="str_change_text_color">Change the preferred text color</string>
    <string name="str_show_hidden_file_folder">Show hidden files/folders</string>
    <string name="str_display_files_folders">Display files and folders that begin with a (period)</string>
    <string name="str_show_image_preview">Show Image Preview</string>
    <string name="str_display_thumbnail">Display a thumbnail for image files</string>
    <string name="str_show_storage_banner">Show Storage Banner</string>
    <string name="str_display_sdcard_information">Display sdcard storage information</string>
    <string name="str_no_sdcard">No Sdcard</string>
    <string name="str_exit">Exit</string>
    <string name="str_cant_read_folder">Can not read folder due to permissions</string>
    <string name="str_coundnt_find_fdf_viewer">Sorry, could not find a pdf viewer</string>
    <string name="str_coundnt_find_html_viewer">"Sorry, could not find a HTML viewer"</string>
    <string name="str_coundnt_find_to_open">Sorry, could not find anything to open </string>
    <string name="str_create_folder">New Folder</string>
    <string name="str_cant_create_folder">New folder was not created</string>
    <string name="str_average_rating">Average rating</string>
    <string name="str_five_star">5 star</string>
	<string name="str_four_star">4 star</string>
	<string name="str_three_star">3 star</string>
	<string name="str_two_star">2 star</string>
	<string name="str_one_star">1 star</string>
	
	<string name="str_comment">Comment</string>
	<string name="str_title">Title</string>
	<string name="str_mandatory_info">You must enter a valid data</string>
	
</resources>