<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_refresh"
          android:title="@string/refresh" 
          android:icon="@drawable/refresh"/>

    <item android:id="@+id/menu_item_create_folder"
          android:title="@string/str_create_folder"
          android:icon="@android:drawable/ic_menu_add"/>

    <item android:id="@+id/menu_item_favorites"
          android:title="@string/favorites" 
          android:icon="@android:drawable/btn_star"/>

    <item android:id="@+id/menu_item_about"
          android:title="@string/about" 
          android:visible="false"
          android:icon="@drawable/zialogo_sm"/>

    <item android:id="@+id/menu_item_quit"
          android:title="@string/quit" 
          android:icon="@android:drawable/ic_lock_power_off"/>
</menu>