<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_full_holo_light" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dip"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:paddingRight="10dip"
                    android:text="@string/hostname"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostname_edittext"
                    android:hint="@string/hostname"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/username"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_edittext"
                    android:hint="@string/username"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:hint="@string/password"
                    android:password="true"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ssl"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/ssl"
                    android:layout_width="wrap_content"
                    android:checked="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:paddingRight="10dip"
                    android:text="@string/hidden_files"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/hidden_files"
                    android:layout_width="wrap_content"
                    android:checked="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/port"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/port_edittext"
                    android:hint="@string/port"
                    android:numeric="integer"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="80" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/webapp_root"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/webapp_root"
                    android:hint="@string/port"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="/alfresco" />
            </TableRow>
        </TableLayout>
        
    </ScrollView>
	<Button
	    android:layout_gravity="center"
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_save" /></LinearLayout>