<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/black" >
	<TableLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="*"
		android:shrinkColumns="*" >
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/offWhite"
			android:text="@string/str_display"
			android:textStyle="bold"
			android:background="@color/darkGray" />
		<View
			android:layout_width="fill_parent"
			android:layout_height="5dip"
			android:background="@color/black" />
			
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dip"
					android:textSize="18sp"
					android:textColor="@color/white"
					android:textStyle="bold"
					android:text="@string/str_display" />
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:paddingTop="3dip"
					android:paddingLeft="8dip"
					android:textColor="@color/offWhite"
					android:text="@string/str_change_text_color" />
			</LinearLayout>
			<ImageButton
				android:id="@+id/setting_text_color_button"
				android:src="@drawable/more"
				android:background="#ff000000"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_gravity="right"
				android:padding="3dp" />
		</TableRow>
			<View
				android:layout_width="fill_parent"
				android:layout_height="3dip"
				android:background="@color/darkGray" />
				
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dip"
					android:textSize="18sp"
					android:textColor="@color/white"
					android:textStyle="bold"
					android:text="@string/str_show_hidden_file_folder" />
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:paddingTop="3dip"
					android:paddingLeft="8dip"
					android:textColor="@color/offWhite"
					android:text="@string/str_display_files_folders" />
			</LinearLayout>
			<CheckBox
				android:id="@+id/setting_hidden_box"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:padding="3dp"
				android:checked="false" />
		</TableRow>
			<View
				android:layout_width="fill_parent"
				android:layout_height="3dip"
				android:background="@color/darkGray" /> 
				
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dip"
					android:textSize="18sp"
					android:textColor="@color/white"
					android:textStyle="bold"
					android:text="@string/str_show_image_preview" />
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:paddingTop="3dip"
					android:paddingLeft="8dip"
					android:textColor="@color/offWhite"
					android:text="@string/str_display_thumbnail" />
			</LinearLayout>
			<CheckBox
				android:id="@+id/setting_thumbnail_box"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:padding="3dp"
				android:checked="false" />
		</TableRow>
		<View
			android:layout_width="fill_parent"
			android:layout_height="3dip"
			android:background="@color/darkGray" />
			
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dip"
					android:textSize="18sp"
					android:textColor="@color/white"
					android:textStyle="bold"
					android:text="@string/str_show_storage_banner" />
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:paddingTop="3dip"
					android:paddingLeft="8dip"
					android:textColor="@color/offWhite"
					android:text="@string/str_display_sdcard_information" />
			</LinearLayout>
			<CheckBox
				android:id="@+id/setting_storage_box"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:padding="3dp"
				android:checked="false" />
		</TableRow>
		
		<View
			android:layout_width="fill_parent"
			android:layout_height="5dip"
			android:background="@color/black" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/offWhite"
			android:textStyle="bold"
			android:text="Sorting" 
			android:background="@color/darkGray" />	
		<View
			android:layout_width="fill_parent"
			android:layout_height="5dip"
			android:background="@color/black" />
			
		<TableRow>
			<LinearLayout
				android:orientation="vertical"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" >
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dip"
					android:textSize="18sp"
					android:textColor="@color/white"
					android:textStyle="bold"
					android:text="@string/str_sorting_type" />
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:paddingTop="3dip"
					android:paddingLeft="8dip"
					android:textColor="@color/offWhite"
					android:text="@string/str_sort_files_folders" />
			</LinearLayout>
			<ImageButton
				android:id="@+id/settings_sort_button"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_gravity="right"
				android:background="#ff000000"
				android:src="@drawable/more" />			
		</TableRow>
		
	</TableLayout>
</ScrollView>