<?xml version="1.0" encoding="utf-8"?>
<com.zia.freshdocs.widget.TransparentPanel xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.HoloEverywhereLight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_full_holo_light"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        style="@style/content_large_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="5dip"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="@color/light" />

    <EditText
        android:id="@+id/folder_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/str_folder_name"
        android:inputType="text"
        android:padding="5dip"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/folder_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/str_folder_description"
        android:inputType="text"
        android:padding="5dip"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/btn_ok"
            style="@style/Theme.HoloEverywhereLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:text="@string/str_ok" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Theme.HoloEverywhereLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel" />
    </LinearLayout>

</com.zia.freshdocs.widget.TransparentPanel>